--- a/source/scss/blocks/form.scss
+++ b/source/scss/blocks/form.scss
@@ -43,6 +43,7 @@
   border: 0;
   border-radius: 3rem;
   outline: none;
+  animation: slide-in-blurred-right 1.5s cubic-bezier(0.165, 0.840, 0.440, 1.000) alternate both;
 
   &:focus {
     border: 1px solid $c-purple;
@@ -144,5 +145,19 @@
     @media (max-width: $mobile) and (orientation: landscape) {
       width: calc(100% - 5rem);
     }
+  }
+}
+
+
+@keyframes slide-in-blurred-right {
+  0% {
+    transform: translateX(1000rem) scaleX(2.5) scaleY(0.2);
+    transform-origin: 0 50%;
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0) scaleY(1) scaleX(1);
+    transform-origin: 50% 50%;
+    opacity: 1;
   }
 }
