--- a/source/scss/blocks/intro.scss
+++ b/source/scss/blocks/intro.scss
@@ -93,6 +93,7 @@
   text-transform: uppercase;
   font-size: 2.4rem;
   line-height: 1.27;
+  animation: 1.5s fadeInUp;
 
   @media (min-width: $stop-scaling) {
     width: 509px;
@@ -160,5 +161,18 @@
   @media (min-width: $stop-scaling) {
     margin: 0 0 0 -5px;
     font-size: 48px;
+  }
+}
+
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translate3d(0, 100%, 0);
+  }
+
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
   }
 }
