--- a/source/scss/blocks/page-header.scss
+++ b/source/scss/blocks/page-header.scss
@@ -241,16 +241,17 @@
     display: block;
     color: inherit;
     padding: 0 0.5em 0.5em;
+    transition: all .3s ease-in-out;
 
     &::after {
       content: "";
       position: absolute;
       bottom: 0;
-      width: 100%;
+      width: 0;
       height: 2px;
       background-color: $c-light;
-      display: none;
       left: 0;
+      transition: all .3s ease-in-out;
 
       @media (min-width: $stop-scaling) {
         left: -5px;
@@ -272,7 +273,7 @@
 
     &.active {
       &::after {
-        display: block;
+        width: 100%;
       }
     }
 
@@ -284,6 +285,7 @@
       &::after {
         opacity: 1;
         background-color: $c-purple;
+        width: 100%;
       }
     }
   }
