--- a/source/scss/blocks/page-header.scss
+++ b/source/scss/blocks/page-header.scss
@@ -36,6 +36,17 @@
   width: 10rem;
   color: $c-light;
 
+  transform: translateX(-4rem);
+  opacity: 0;
+  transition: opacity, transform;
+  transition-timing-function: cubic-bezier(0.5, 0.8, 1, 1);
+  transition-duration: 0.5s;
+
+  .body--loaded & {
+    transform: translateX(0);
+    opacity: 1;
+  }
+
   @media (min-width: $stop-scaling) {
     top: -5px;
     padding: 10px 0;
@@ -130,6 +141,12 @@
 .page-header__nav {
   display: flex;
   align-items: center;
+  opacity: 0;
+  transition: opacity 0.5s cubic-bezier(0.5, 0.8, 1, 1) 0.5s;
+
+  .body--loaded & {
+    opacity: 1;
+  }
 
   @media (max-width: $tablet) and (orientation: portrait) {
     position: fixed;
