--- a/source/scss/blocks/prizes.scss
+++ b/source/scss/blocks/prizes.scss
@@ -30,6 +30,7 @@
   font-size: 4.8rem;
   line-height: 0.906;
   letter-spacing: -0.04em;
+  animation: fadeInUp 1s forwards;
 
   @media (min-width: $stop-scaling) {
     font-size: 48px;
@@ -58,6 +59,7 @@
   text-transform: uppercase;
   font-size: 2.4rem;
   line-height: 1.2;
+  animation: fadeInUp 1.15s forwards;
 
   @media (min-width: $stop-scaling) {
     margin-left: 58px;
@@ -94,6 +96,7 @@
   justify-content: flex-end;
   align-items: flex-end;
   margin-top: auto;
+  animation: slide-in-blurred-right 1.25s forwards;
 
   @media (max-width: $tablet) and (orientation: portrait) {
     flex-direction: column;
