Сделал задание module2-task1

--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -1,5 +1,6 @@
 @import "general/variables.scss";
 @import "vendor/normalize.scss";
+@import "blocks/animation.scss";
 @import "vendor/swiper.scss";
 @import "general/mixins.scss";
 @import "general/fonts.scss";
