--- a/source/scss/blocks/page-header.scss
+++ b/source/scss/blocks/page-header.scss
@@ -36,17 +36,6 @@
   width: 10rem;
   color: $c-light;
 
-  transform: translateX(-4rem);
-  opacity: 0;
-  transition: opacity, transform;
-  transition-timing-function: cubic-bezier(0.5, 0.8, 1, 1);
-  transition-duration: 0.5s;
-
-  .body--loaded & {
-    transform: translateX(0);
-    opacity: 1;
-  }
-
   @media (min-width: $stop-scaling) {
     top: -5px;
     padding: 10px 0;
@@ -141,12 +130,6 @@
 .page-header__nav {
   display: flex;
   align-items: center;
-  opacity: 0;
-  transition: opacity 0.5s cubic-bezier(0.5, 0.8, 1, 1) 0.5s;
-
-  .body--loaded & {
-    opacity: 1;
-  }
 
   @media (max-width: $tablet) and (orientation: portrait) {
     position: fixed;
@@ -258,22 +241,16 @@
     display: block;
     color: inherit;
     padding: 0 0.5em 0.5em;
-    transition: all .3s ease-in-out;
 
     &::after {
       content: "";
       position: absolute;
       bottom: 0;
-      width: 0;
+      width: 100%;
       height: 2px;
       background-color: $c-light;
+      display: none;
       left: 0;
-      transition: all .3s ease-in-out;
-
-      @media (min-width: $stop-scaling) {
-        left: -5px;
-        right: -5px;
-      }
 
       @media (max-width: $tablet) and (orientation: portrait) {
         left: 0;
@@ -290,7 +267,7 @@
 
     &.active {
       &::after {
-        width: 100%;
+        display: block;
       }
     }
 
@@ -302,7 +279,6 @@
       &::after {
         opacity: 1;
         background-color: $c-purple;
-        width: 100%;
       }
     }
   }
