--- a/source/scss/blocks/rules.scss
+++ b/source/scss/blocks/rules.scss
@@ -31,8 +31,6 @@
   font-size: 4.8rem;
   line-height: 0.906;
   letter-spacing: -0.04em;
-  opacity: 0;
-  animation: fadeInUp 0.75s ease forwards;
 
   @media (min-width: $stop-scaling) {
     margin-bottom: 50px;
@@ -61,8 +59,6 @@
   text-transform: uppercase;
   font-size: 2.4rem;
   line-height: 1.2;
-  opacity: 0;
-  animation: fadeInUp 0.75s ease forwards 0.25s;
 
   @media (min-width: $stop-scaling) {
     margin-left: 58px;
@@ -131,7 +127,7 @@
   @media (min-width: $stop-scaling) {
     margin: 0 0 62px;
     padding-top: 6px;
-    padding-left: 65px;
+    min-height: 5rem;
   }
 
   @media (max-width: $tablet) and (orientation: portrait) {
@@ -148,56 +144,12 @@
     font-size: 1.2rem;
   }
 
-  &:nth-child(1) {
-    &::before {
-      animation-delay: 0.7s;
-    }
-  }
-
-  &:nth-child(2) {
-    &::before {
-      animation-delay: 0.9s;
-    }
-  }
-
-  &:nth-child(3) {
-    &::before {
-      animation-delay: 1.1s;
-    }
-  }
-
-  &:nth-child(4) {
-    &::before {
-      animation-delay: 1.3s;
-    }
-  }
-
-  &:nth-child(1) p {
-    animation-delay: 0.85s;
-  }
-
-  &:nth-child(2) p {
-    animation-delay: 1.15s;
-  }
-
-  &:nth-child(3) p {
-    animation-delay: 1.25s;
-  }
-
-  &:nth-child(4) p {
-    animation-delay: 1.45s;
-  }
-
   &::before {
     content: counter(li);
     counter-increment: li;
     position: absolute;
     top: 0;
     left: 0;
-    // display: flex;
-    // flex-direction: column;
-    // justify-content: center;
-    // align-items: center;
     width: 4.5rem;
     height: 4.5rem;
     font-family: $font-alt;
@@ -207,10 +159,6 @@
     border-radius: 50%;
     line-height: 5rem;
     text-align: center;
-    color: $c-light;
-    transform: scale(0);
-    will-change: transform;
-    animation: scaleRuleItem 0.65s cubic-bezier(0.35, 1.55, 0.65, 1) forwards;
 
     @media (max-width: $tablet) and (orientation: portrait) {
       top: 1rem;
@@ -231,10 +179,6 @@
 
   p {
     margin: 0;
-    opacity: 0;
-    transform: translateX(2rem);
-    will-change: transform;
-    animation: visualItem 0.75s cubic-bezier(0.35, 1, 0.65, 1)  forwards;
 
     @media (max-width: $tablet) and (orientation: portrait) {
       min-height: calc(1.4rem * 2.2);
@@ -246,14 +190,6 @@
   position: absolute;
   bottom: 6rem;
   right: 5.6rem;
-  opacity: 0;
-  visibility: hidden;
-
-  &.active {
-    opacity: 1;
-    visibility: visible;
-    animation: rulesLink 0.45s cubic-bezier(0.25, 1, 0.9, 1) forwards;
-  }
 
   @media (min-width: $stop-scaling) {
     bottom: 60px;
