--- a/source/scss/blocks/slider.scss
+++ b/source/scss/blocks/slider.scss
@@ -5,6 +5,7 @@
 
   .swiper-wrapper {
     min-height: 100vh;
+    box-sizing: border-box;
 
     @media (max-width: $tablet) and (orientation: portrait) {
       min-height: calc(var(--vh, 1vh) * 100);
@@ -274,12 +275,4 @@
       background-color: $c-light;
     }
   }
-}
-
-.swiper-slide-active .slider__item-text {
-  animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
-}
-
-.swiper-slide-next .slider__item-text {
-  animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) 1s both;
 }
