Сделал module2-task2

--- a/source/scss/blocks/intro.scss
+++ b/source/scss/blocks/intro.scss
@@ -33,6 +33,19 @@
   line-height: 0.906;
   letter-spacing: -0.04em;
 
+  .space {
+    padding: 0.5rem 0;
+    margin: 0 -0.04em;
+  }
+
+  .space > .letter {
+    transform: translate3d(0, 14rem, 0);
+  }
+
+  &.active .space > .letter {
+    transform: translate3d(0, 2rem, 0);
+  }
+
   @media (min-width: $stop-scaling) {
     max-width: 990px;
     font-size: 120px;
@@ -41,6 +54,10 @@
   @media (max-width: $tablet) and (orientation: portrait) {
     max-width: 100%;
     font-size: 3.6rem;
+
+    &.active .space > .letter {
+      transform: translate3d(0, 1rem, 0);
+    }
   }
 
   @media (max-width: $tablet) and (orientation: landscape) {
@@ -93,7 +110,12 @@
   text-transform: uppercase;
   font-size: 2.4rem;
   line-height: 1.27;
-  animation: 1.5s fadeInUp;
+  opacity: 0;
+  transform: translateY(2.5rem);
+
+  .active & {
+    animation: fadeInUp 1.5s forwards 1s;
+  }
 
   @media (min-width: $stop-scaling) {
     width: 509px;
@@ -142,6 +164,12 @@
   text-transform: uppercase;
   font-size: 2.4rem;
   line-height: 1.2;
+  opacity: 0;
+  visibility: hidden;
+
+  .active & {
+    animation: opacity 1.35s forwards 1.35s;
+  }
 
   @media (min-width: $stop-scaling) {
     margin: 0 0 16px;
@@ -157,6 +185,22 @@
   font-size: 4.8rem;
   line-height: 0.906;
   letter-spacing: -0.04em;
+
+  .space {
+    padding: 0.5rem 0.1em;
+
+    &:first-child {
+      padding-left: 0;
+    }
+  }
+
+  .space > .letter {
+    transform: translate3d(0, 5.5rem, 0);
+  }
+
+  &.active .space > .letter {
+    transform: translate3d(0, 0, 0);
+  }
 
   @media (min-width: $stop-scaling) {
     margin: 0 0 0 -5px;
