--- a/source/scss/blocks/animation.scss
+++ b/source/scss/blocks/animation.scss
@@ -81,3 +81,14 @@
     transform: translateX(0);
   }
 }
+
+@keyframes opacity {
+  from {
+    opacity: 0;
+    visibility: hidden;
+  }
+  to {
+    opacity: 1;
+    visibility: visible;
+  }
+}
