--- a/source/scss/blocks/animation.scss
+++ b/source/scss/blocks/animation.scss
@@ -92,3 +92,26 @@
     visibility: visible;
   }
 }
+
+
+@keyframes rotateToRight {
+  from {
+    opacity: 0;
+    transform: translateX(-60px) rotate(-135deg);
+  }
+  to {
+    visibility: visible;
+    transform: translateX(0) rotate(0);
+  }
+}
+
+@keyframes rotateToLeft {
+  from {
+    opacity: 0;
+    transform: translateX(60px) rotate(135deg);
+  }
+  to {
+    visibility: visible;
+    transform: translateX(0) rotate(0);
+  }
+}
