--- a/source/scss/blocks/slider.scss
+++ b/source/scss/blocks/slider.scss
@@ -96,6 +96,7 @@
   max-width: 34rem;
   font-size: 1.8rem;
   line-height: 2rem;
+  opacity: 0;
 
   @media (min-width: $stop-scaling) {
     margin-top: 36px;
@@ -155,10 +156,28 @@
   width: 4rem;
   height: 4rem;
   color: $c-dark;
+  visibility: hidden;
+  will-change: transform;
 
   @media (min-width: $stop-scaling) {
     width: 40px;
     height: 40px;
+  }
+
+  &--prev,
+  &--next {
+    animation-duration: 0.75s;
+    animation-timing-function: cubic-bezier(0.25, 0.1, 0, 1.55);
+    animation-fill-mode: forwards;
+    animation-delay: 0.95s;
+  }
+
+  &--prev {
+    animation-name: rotateToRight;
+  }
+
+  &--next {
+    animation-name: rotateToLeft;
   }
 
   &::before {
@@ -278,9 +297,9 @@
 }
 
 .swiper-slide-active .slider__item-text {
-  animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+  animation: text-focus-in 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) 0.5s forwards;
 }
 
 .swiper-slide-next .slider__item-text {
-  animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) 1s both;
+  animation: text-focus-in 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) 1s forwards;
 }
