--- a/source/scss/blocks/animation.scss
+++ b/source/scss/blocks/animation.scss
@@ -115,3 +115,12 @@
     transform: translateX(0) rotate(0);
   }
 }
+
+@keyframes slideToLeftJourneys {
+  from {
+    transform: translateX(40rem);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
