--- a/source/scss/blocks/animation.scss
+++ b/source/scss/blocks/animation.scss
@@ -124,3 +124,15 @@
     transform: translateX(0);
   }
 }
+
+
+@keyframes slideToLeftS {
+  from {
+    opacity: 0;
+    transform: translateX(2rem);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
